karnc/tests/fixtures/negative/140_reserved_karn_name/src/karn/foo.karn
commons karn.foo

type Tag = String
